--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,32 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>yuzu-def-ui</title>
+
+    <style>
+			body {
+				font-family: sans-serif;
+				background: rgba(255,255,255, 0.7);
+			}
+			ul, ol {
+				padding-left: 0;
+				margin: 0;
+			}
+			ol ol {
+				padding-left: 1.5em;
+			}
+			li {
+				list-style: none;
+				padding: 0.5em 0;
+			}
+			.stateToggle {
+				cursor: pointer;
+				margin-right: 0.5em;
+			}
+			a {
+				color: inherit!important;
+			}
+		</style>
+
   </head>
   <body>
     <noscript>
