--- a/public/_templates/html/pages/content/content.html
+++ b/public/_templates/html/pages/content/content.html
@@ -19,7 +19,7 @@
 			</head>
 			<body class="landing-page sidebar-collapse">
 		
-				<iframe frameborder="0" scrolling="no" src="/index.html" style="position: fixed; width:40%; height: 100%; bottom: 0; left: 0; z-index: 10000;"></iframe>
+				<iframe frameborder="0" scrolling="no" src="/index.html" style="position: fixed; width:15%; min-width: 9.625rem; max-width: 21rem; height: 100%; bottom: 0; left: 0; z-index: 10000;"></iframe>
 		
 				<!-- Navbar -->
 				<nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent " color-on-scroll="400">
