--- a/public/_templates/html/blocks/pageHeader/parPageHeader.html
+++ b/public/_templates/html/blocks/pageHeader/parPageHeader.html
@@ -12,7 +12,7 @@
 	</head>
 	<body> 
 
-    <iframe frameborder="0" scrolling="no" src="/index.html" style="position: fixed; width:15%; height: 100%; bottom: 0; left: 0; z-index: 10000;"></iframe>
+    <iframe frameborder="0" scrolling="no" src="/index.html" style="position: fixed; width:15%; min-width: 9.625rem; max-width: 21rem; height: 100%; bottom: 0; left: 0; z-index: 10000;"></iframe>
 
 		<div class="page-header header-filter">
   <div class="page-header-image" style="background-image: url('/_client/img/profile_city.jpg');"></div>
