tweaks and bug fixes

--- a/public/_templates/html/blocks/_gridItems/features/parFeatures_new-state.html
+++ b/public/_templates/html/blocks/_gridItems/features/parFeatures_new-state.html
@@ -1,60 +1,67 @@
 <!doctype html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
-		<!--     Fonts and icons     -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200|Material+Icons" rel="stylesheet" />
-    <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
-    <!-- CSS Files -->
-      <link rel="stylesheet" href="/_client/styles/bootstrap.css" />		
-    <link rel="stylesheet" href="/_client/styles/main.css">
-    <script src="/websocketClient.js" defer></script>
-	</head>
-	<body> 
 
-    <iframe frameborder="0" scrolling="no" src="/index.html" style="position: fixed; width:40%; min-width: 9.625rem; max-width: 40rem; height: 100%; bottom: 0; left: 0; z-index: 10000;"></iframe>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
+  <!--     Fonts and icons     -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200|Material+Icons" rel="stylesheet" />
+  <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
+  <!-- CSS Files -->
+  <link rel="stylesheet" href="/_client/styles/bootstrap.css" />
+  <link rel="stylesheet" href="/_client/styles/main.css">
+  <script src="/websocketClient.js" defer></script>
+</head>
 
+<body>
 
-		<div class="features-2 section-image text-center" style="background-image: url('/_client/img/city-profile.jpg')">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-8 mr-auto ml-auto">
-        <h2 class="title">Let&#x27;s talk a new beginning</h2>
-        <h4 class="description">This is the paragraph where you can write more details about your product. Keep you user engaged by providing meaningful information. Remember that by this time, the user is curious, otherwise he wouldn&apos;t scroll to get here. Add a button if you want the user to see more.</h4>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-4">
-        <div class="info">
-          <div class="icon icon-info icon-circle">
-            <i class="material-icons">chat</i>
+  <iframe frameborder="0" scrolling="no" src="/index.html"
+    style="position: fixed; width:40%; min-width: 9.625rem; max-width: 40rem; height: 100%; bottom: 0; left: 0; z-index: 10000;"></iframe>
+
+  <div class="content-root">
+    <div class="features-2 section-image text-center" style="background-image: url('/_client/img/city-profile.jpg')">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-8 mr-auto ml-auto">
+            <h2 class="title">Let&#x27;s talk a new beginning</h2>
+            <h4 class="description">This is the paragraph where you can write more details about your product. Keep you
+              user engaged by providing meaningful information. Remember that by this time, the user is curious,
+              otherwise he wouldn&apos;t scroll to get here. Add a button if you want the user to see more.</h4>
           </div>
-          <h4 class="info-title">Work With Any Team</h4>
-          <p class="description">Whether it’s for work or even the next family vacation, Trello helps your team.</p>
         </div>
-      </div>
-      <div class="col-md-4">
-        <div class="info">
-          <div class="icon icon-danger icon-circle">
-            <i class="material-icons">fingerprint</i>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="info">
+              <div class="icon icon-info icon-circle">
+                <i class="material-icons">chat</i>
+              </div>
+              <h4 class="info-title">Work With Any Team</h4>
+              <p class="description">Whether it’s for work or even the next family vacation, Trello helps your team.</p>
+            </div>
           </div>
-          <h4 class="info-title">Work With Any Team</h4>
-          <p class="description">Whether it’s for work or even the next family vacation, Trello helps your team.</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="info">
-          <div class="icon icon-success icon-circle">
-            <i class="material-icons">done_all</i>
+          <div class="col-md-4">
+            <div class="info">
+              <div class="icon icon-danger icon-circle">
+                <i class="material-icons">fingerprint</i>
+              </div>
+              <h4 class="info-title">Work With Any Team</h4>
+              <p class="description">Whether it’s for work or even the next family vacation, Trello helps your team.</p>
+            </div>
           </div>
-          <h4 class="info-title">Work With Any Team</h4>
-          <p class="description">Whether it’s for work or even the next family vacation, Trello helps your team.</p>
+          <div class="col-md-4">
+            <div class="info">
+              <div class="icon icon-success icon-circle">
+                <i class="material-icons">done_all</i>
+              </div>
+              <h4 class="info-title">Work With Any Team</h4>
+              <p class="description">Whether it’s for work or even the next family vacation, Trello helps your team.</p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+  <script src="/_client/js/core/jquery.min.js" type="text/javascript"></script>
+</body>
 
-	</body>
 </html>
