finally fix dist t correct folder! - improve empy cal to resolve inline refs

--- a/public/_templates/html/pages/content/content_new-state.html
+++ b/public/_templates/html/pages/content/content_new-state.html
@@ -18,7 +18,7 @@
 	<!-- CSS Files -->
 	<link rel="stylesheet" href="/_client/styles/bootstrap.css" />
 	<link rel="stylesheet" href="/_client/styles/main.css">
-	<script src="/websocketClient.js" defer></script>
+	<script src="/yuzu-def-ui/websocketClient.js" defer></script>
 </head>
 
 <body class="landing-page sidebar-collapse">
